--- a/docs/my-custom.css
+++ b/docs/my-custom.css
@@ -83,7 +83,7 @@ h2, h3, h4 {
 
 .title-slide h1  {
   color: #ffffff;
-  font-size: 100px;
+  font-size: 80px;
   text-shadow: none;
   font-weight: 400;
   text-align: left;
@@ -153,6 +153,19 @@ hr, .mline h1::after {
   border-radius: 3px;
   padding: 4px;
 }
+
+.footnote {
+    position: absolute;
+    bottom: 3em;
+    padding-right: 4em;
+    font-size: 90%;
+}
+
+.fancy {
+    font-family: 'Cormorant Upright', serif;
+    font-weight: 700;
+}
+
 
 .code10 .remark-code {
   font-size: 10%;
