--- a/docs/my-custom.css
+++ b/docs/my-custom.css
@@ -156,9 +156,10 @@ hr, .mline h1::after {
 
 .footnote {
     position: absolute;
-    bottom: 3em;
-    padding-right: 4em;
-    font-size: 90%;
+    bottom: .5em;
+    padding-left: 10px;
+    font-size: 150%;
+    text-align: left;
 }
 
 .fancy {
