--- a/docs/my-custom.css
+++ b/docs/my-custom.css
@@ -14,8 +14,15 @@
 }
 
 .inverse {
-  background-color: #23373B;
-  text-shadow: none;
+  background-image: url(fig/black.jpg);
+  border-image: 0px none;
+  background-size: cover;
+  border-top: 0px solid #FAFAFA;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 1.5;
+  padding: 1em 2em 1em 2em;
+  text-align: center;
 }
 
 /* Removes colored bar from top of the slide resulting in a clear slide */
@@ -162,9 +169,11 @@ hr, .mline h1::after {
     text-align: left;
 }
 
-.fancy {
-    font-family: 'Cormorant Upright', serif;
-    font-weight: 700;
+.red { color: red; }
+.remark-code-line-highlighted { background-color: #d9f2d9; }
+.remark-code, .remark-inline-code { 
+    color: #7c347f;
+    font-weight: 300;
 }
 
 
